# gpu-shader-core-verification

./: CMakeLists.txt  License.md  README.md
ai_tools/: README.md
ai_tools/coverage_analysis/: coverage_gap_analyzer.py
ai_tools/test_optimization/: test_optimizer.py
data/: coverage_data.json  coverage_data_history.json
docs/: README.md  architecture.md  project_report.md  user_guide.md
docs/results/: case_study.md  results_analysis.md
examples/: CMakeLists.txt  README.md  basic_example.cpp
model/: CMakeLists.txt  README.md
model/memory_subsystem/: cache_l1.h  cache_l2.h  global_memory.h  memory_response.h  memory_state.h  memory_subsystem.h  memory_transaction.h  register_file.h  shared_memory.h  transaction_queue.h
model/shader_core/: execution_unit.h  instruction_buffer.h  instruction_decoder.h  register_file.h  shader_core.h
model/tensor_unit/: tensor_buffer.h  tensor_data.h  tensor_opcode.h  tensor_unit.h
verification/: CMakeLists.txt  README.md  run_all_tests.sh.in
verification/test_cases/: basic_alu_test.cpp  basic_memory_test.cpp  basic_tensor_test.cpp  edge_ai_test.cpp  test_case.h
